fix header and footer alignment

--- a/src/components/Footer/tailwind.css
+++ b/src/components/Footer/tailwind.css
@@ -1,5 +1,5 @@
 .footer-container {
-  @apply container mx-auto py-5 px-6 md:px-8 lg:px-12 flex flex-col-reverse gap-5 md:flex-row md:gap-0 items-center justify-evenly;
+  @apply container mx-auto py-5 px-6 md:px-8 lg:px-12 flex flex-col-reverse gap-5 md:flex-row md:gap-0 items-center justify-between;
 }
 
 .footer-logo {
