--- a/src/components/Header/tailwind.css
+++ b/src/components/Header/tailwind.css
@@ -1,5 +1,5 @@
 .header-container {
-  @apply container mx-auto py-5 px-6 md:px-8 lg:px-12 flex items-center justify-between;
+  @apply container mx-auto justify-center py-5 px-6 md:px-8 lg:px-12 flex items-center md:justify-between;
 }
 
 .header-logo {
